# nibbler-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/nibbler_bot/: bot.py  charts.py  config.py  formatting.py  main.py  meal_analyzer.py  models.py  monitoring.py  storage.py
src/nibbler_bot/prompts/: meal_analysis_system_prompt.txt  meal_scan_system_prompt.txt
tests/: test_charts.py  test_config.py  test_formatting.py  test_storage.py
